# pocket-onnx

./: .gitignore  README.md  example.py  italk  pyproject.toml  server.py  static
pocket_tts/: audio.py  config.py  engine.py  tokenizer.py
